--- a/index.html
+++ b/index.html
@@ -135,45 +135,54 @@
       <a href="#" style="color:#fff;text-decoration:none;font-weight:600">About Us</a>
       <a href="#" style="color:#fff;text-decoration:none;font-weight:600">MSP</a>
       <a href="#" style="color:#fff;text-decoration:none;font-weight:600">Yield Comparison</a>
+      <a href="#" style="color:#fff;text-decoration:none;font-weight:600">Contact Us</a>
     </nav>
     <section class="grid" aria-label="Features">
       <a class="big-card overlay-green" href="seeds.html"
-        style="background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
+        style="background-color:#8cc084;
+    background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
         <div class="title">Seeds Availability</div>
         <div class="desc">Find certified seeds & local vendors near your village.</div>
       </a>
       <a class="big-card overlay-yellow" href="schemes.html"
-        style="background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
+        style="background-color:#f0eabb;
+    background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
         <div class="title">Govt Schemes & Policies</div>
         <div class="desc">Check eligibility, subsidies and applications for your area.</div>
       </a>
       <a class="big-card overlay-blue" href="weather.html"
-        style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
+        style="background-color:#8ab6ec;
+    background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80'), url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
         <div class="title">Weather Forecast</div>
         <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
       </a>
       <a class="big-card overlay-purple" href="calendar.html"
-        style="background-image:url('https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&w=600');">
+        style="background-color:#af8cca;
+    background-image:url('https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&w=600');">
         <div class="title">Crop Calendar</div>
         <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
       </a>
       <a class="big-card overlay-green" href="fertilizer.html"
-        style="background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80');">
+        style="background-color:#83c37e;
+    background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
         <div class="title">Fertilizer & Pest Advisory</div>
         <div class="desc">Soil-based recommendations & early pest warnings.</div>
       </a>
       <a class="big-card overlay-blue" href="soil.html"
-        style="background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+        style="background-color:#96bcae;
+    background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
         <div class="title">Soil Health</div>
         <div class="desc">Upload soil reports & get improvement plans.</div>
       </a>
       <a class="big-card overlay-green" href="msp.html"
-        style="background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80');">
+        style="background-color:#adcfa5;
+    background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
         <div class="title">MSP & Market Rates</div>
         <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
       </a>
       <a class="big-card overlay-purple" href="yield.html"
-        style="background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
+        style="background-color:#beb1d6;
+    background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
         <div class="title">Yield Comparison</div>
         <div class="desc">Compare historical yields and forecast potential improvements.</div>
       </a>
@@ -242,46 +251,54 @@
         </div>
       </aside>
     </section>
-    <!-- DASHBOARD GRID ON MAIN PAGE -->
+    <!-- DASHBOARD GRID ON MAIN PAGE, fallback for every image  -->
     <section class="dashboard-bg">
       <section class="grid" aria-label="Features">
         <a class="big-card overlay-green" href="seeds.html"
-          style="background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
+          style="background-color:#8cc084;
+      background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
           <div class="title">Seeds Availability</div>
           <div class="desc">Find certified seeds & local vendors near your village.</div>
         </a>
         <a class="big-card overlay-yellow" href="schemes.html"
-          style="background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
+          style="background-color:#f0eabb;
+      background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
           <div class="title">Govt Schemes & Policies</div>
           <div class="desc">Check eligibility, subsidies and applications for your area.</div>
         </a>
         <a class="big-card overlay-blue" href="weather.html"
-          style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
+          style="background-color:#8ab6ec;
+      background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80'), url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
           <div class="title">Weather Forecast</div>
           <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
         </a>
         <a class="big-card overlay-purple" href="calendar.html"
-          style="background-image:url('https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&w=600');">
+          style="background-color:#af8cca;
+      background-image:url('https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&w=600');">
           <div class="title">Crop Calendar</div>
           <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
         </a>
         <a class="big-card overlay-green" href="fertilizer.html"
-          style="background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80');">
+          style="background-color:#83c37e;
+      background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
           <div class="title">Fertilizer & Pest Advisory</div>
           <div class="desc">Soil-based recommendations & early pest warnings.</div>
         </a>
         <a class="big-card overlay-blue" href="soil.html"
-          style="background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+          style="background-color:#96bcae;
+      background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
           <div class="title">Soil Health</div>
           <div class="desc">Upload soil reports & get improvement plans.</div>
         </a>
         <a class="big-card overlay-green" href="msp.html"
-          style="background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80');">
+          style="background-color:#adcfa5;
+      background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
           <div class="title">MSP & Market Rates</div>
           <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
         </a>
         <a class="big-card overlay-purple" href="yield.html"
-          style="background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
+          style="background-color:#beb1d6;
+      background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
           <div class="title">Yield Comparison</div>
           <div class="desc">Compare historical yields and forecast potential improvements.</div>
         </a>
