--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     .hero .cta.primary{background:#1e7b3f;color:#fff;box-shadow:0 10px 26px rgba(30,123,63,0.12)}
     .hero .cta.ghost{background:transparent;border:1px solid #d6eee0;color:#1e7b3f}
     .hero .right{
-      width:320px;height:120px;border-radius:12px;background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&w=700&fit=crop');
+      width:320px;height:120px;border-radius:12px;background-image:url('https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&w=700');
       background-size:cover;background-position:center;
       box-shadow:inset 0 0 0 120px rgba(255,255,255,0.18);
       display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;
@@ -139,20 +139,20 @@
     </nav>
     <section class="grid" aria-label="Features">
       <a class="big-card overlay-green" href="seeds.html"
-        style="background-color:#8cc084;
-    background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
+        style="background-color:#76b852;
+    background-image:url('https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&w=600');">
         <div class="title">Seeds Availability</div>
         <div class="desc">Find certified seeds & local vendors near your village.</div>
       </a>
       <a class="big-card overlay-yellow" href="schemes.html"
-        style="background-color:#f0eabb;
+        style="background-color:#f5e84b;
     background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
         <div class="title">Govt Schemes & Policies</div>
         <div class="desc">Check eligibility, subsidies and applications for your area.</div>
       </a>
       <a class="big-card overlay-blue" href="weather.html"
-        style="background-color:#8ab6ec;
-    background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80'), url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
+        style="background-color:#7ec1f7;
+    background-image:url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
         <div class="title">Weather Forecast</div>
         <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
       </a>
@@ -163,25 +163,25 @@
         <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
       </a>
       <a class="big-card overlay-green" href="fertilizer.html"
-        style="background-color:#83c37e;
-    background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+        style="background-color:#a8d08d;
+    background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
         <div class="title">Fertilizer & Pest Advisory</div>
         <div class="desc">Soil-based recommendations & early pest warnings.</div>
       </a>
       <a class="big-card overlay-blue" href="soil.html"
         style="background-color:#96bcae;
-    background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+    background-image:url('https://images.pexels.com/photos/1510538/pexels-photo-1510538.jpeg?auto=compress&w=600');">
         <div class="title">Soil Health</div>
         <div class="desc">Upload soil reports & get improvement plans.</div>
       </a>
       <a class="big-card overlay-green" href="msp.html"
         style="background-color:#adcfa5;
-    background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
+    background-image:url('https://images.pexels.com/photos/2402236/pexels-photo-2402236.jpeg?auto=compress&w=600');">
         <div class="title">MSP & Market Rates</div>
         <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
       </a>
       <a class="big-card overlay-purple" href="yield.html"
-        style="background-color:#beb1d6;
+        style="background-color:#b099e2;
     background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
         <div class="title">Yield Comparison</div>
         <div class="desc">Compare historical yields and forecast potential improvements.</div>
@@ -255,20 +255,20 @@
     <section class="dashboard-bg">
       <section class="grid" aria-label="Features">
         <a class="big-card overlay-green" href="seeds.html"
-          style="background-color:#8cc084;
-      background-image:url('https://images.pexels.com/photos/552958/pexels-photo-552958.jpeg?auto=compress&w=600');">
+          style="background-color:#76b852;
+      background-image:url('https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&w=600');">
           <div class="title">Seeds Availability</div>
           <div class="desc">Find certified seeds & local vendors near your village.</div>
         </a>
         <a class="big-card overlay-yellow" href="schemes.html"
-          style="background-color:#f0eabb;
+          style="background-color:#f5e84b;
       background-image:url('https://images.pexels.com/photos/248420/pexels-photo-248420.jpeg?auto=compress&w=600');">
           <div class="title">Govt Schemes & Policies</div>
           <div class="desc">Check eligibility, subsidies and applications for your area.</div>
         </a>
         <a class="big-card overlay-blue" href="weather.html"
-          style="background-color:#8ab6ec;
-      background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80'), url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
+          style="background-color:#7ec1f7;
+      background-image:url('https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?auto=compress&w=600');">
           <div class="title">Weather Forecast</div>
           <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
         </a>
@@ -279,25 +279,25 @@
           <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
         </a>
         <a class="big-card overlay-green" href="fertilizer.html"
-          style="background-color:#83c37e;
-      background-image:url('https://images.unsplash.com/photo-1511690743698-d9d85f2fbf38?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+          style="background-color:#a8d08d;
+      background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
           <div class="title">Fertilizer & Pest Advisory</div>
           <div class="desc">Soil-based recommendations & early pest warnings.</div>
         </a>
         <a class="big-card overlay-blue" href="soil.html"
           style="background-color:#96bcae;
-      background-image:url('https://images.pexels.com/photos/461382/pexels-photo-461382.jpeg?auto=compress&w=600');">
+      background-image:url('https://images.pexels.com/photos/1510538/pexels-photo-1510538.jpeg?auto=compress&w=600');">
           <div class="title">Soil Health</div>
           <div class="desc">Upload soil reports & get improvement plans.</div>
         </a>
         <a class="big-card overlay-green" href="msp.html"
           style="background-color:#adcfa5;
-      background-image:url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=600&q=80'),url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
+      background-image:url('https://images.pexels.com/photos/2402236/pexels-photo-2402236.jpeg?auto=compress&w=600');">
           <div class="title">MSP & Market Rates</div>
           <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
         </a>
         <a class="big-card overlay-purple" href="yield.html"
-          style="background-color:#beb1d6;
+          style="background-color:#b099e2;
       background-image:url('https://images.pexels.com/photos/2445746/pexels-photo-2445746.jpeg?auto=compress&w=600');">
           <div class="title">Yield Comparison</div>
           <div class="desc">Compare historical yields and forecast potential improvements.</div>
