--- a/index.html
+++ b/index.html
@@ -24,21 +24,16 @@
       box-shadow:0 6px 60px rgba(50, 85, 70, 0.14), 0 1.5px 12px rgba(90,155,120,0.09);
       backdrop-filter:blur(8px);
     }
-    .sidebar{
-      position:fixed;left:0;top:0;bottom:0;width:350px;max-width:98vw;
+    .sidebar { position:fixed;left:0;top:0;bottom:0;width:350px;max-width:98vw;
       background:#1b5e33;z-index:2000;
       padding:22px 12px 24px 18px;overflow-y:auto;display:none;
-      box-shadow: 0 10px 40px rgba(27, 94, 51, 0.18);
-    }
+      box-shadow: 0 10px 40px rgba(27, 94, 51, 0.18);}
     .sidebar .big-card {margin-bottom: 18px;}
     .sidebar.open { display:block; }
     .sidebar h3 { color: #fff; }
     .sidebar nav a { color: #fff; }
-    .navbar{position:sticky;top:0;z-index:1200;
-      display:flex;justify-content:space-between;align-items:center;
-      padding:14px 26px;
-      background:rgba(255,255,255,0.92);
-      box-shadow:0 6px 18px rgba(20,30,20,0.06);}
+    .navbar{position:sticky;top:0;z-index:1200;display:flex;justify-content:space-between;align-items:center;
+      padding:14px 26px;background:rgba(255,255,255,0.92);box-shadow:0 6px 18px rgba(20,30,20,0.06);}
     .nav-left{display:flex;align-items:center;gap:14px}
     .menu-btn{display:inline-flex;align-items:center;justify-content:center;
       width:44px;height:44px;border-radius:10px;border:none;
@@ -120,6 +115,11 @@
     .chat-input input{flex:1;padding:10px;border:1px solid #e6efe6;border-radius:8px;margin-right:8px}
     .chat-msg{background:#e9f7ee;padding:10px;border-radius:8px;margin-bottom:8px;max-width:80%}
     .chat-msg.me{background:#dbefff;margin-left:auto;color:#06264a}
+    #how-modal{display:none;position:fixed;left:0;top:0;width:100vw;height:100vh;z-index:2050;background:rgba(20,40,23,0.2);}
+    #how-dialog{max-width:380px;margin:80px auto;background:#fff;padding:28px 20px 18px 20px;border-radius:18px;
+      box-shadow:0 16px 64px rgba(15,80,40,0.15);}
+    #how-modal p{color:#256149;margin:9px 7px 0 5px;font-size:16px;}
+    #how-close{font-size:20px;float:right;background:none;border:none;cursor:pointer;color:#256149;}
     @media (max-width:1200px){ .section{grid-template-columns:1fr;max-width:96vw;} }
     @media (max-width:960px){ .sidebar{width:98vw;max-width:98vw;} .dashboard-bg{padding:10px;}
       .chat-window{width:99vw;} }
@@ -225,24 +225,24 @@
         <div class="news-scroll">
           <div class="news-track" id="newsTrack">
             <div>
-              <div class="news-item">🔥 Stubble management machines distributed in Punjab.</div>
-              <div class="news-item">🌱 New high-yield seed variety released.</div>
-              <div class="news-item">💧Localized irrigation training programs starting next week.</div>
-              <div class="news-item">💰 MSP updates pushed for rabi crops — check MSP page.</div>
-              <div class="news-item">☁️ IMD predicts patchy showers across NW regions.</div>
+              <div class="news-item" id="newsitem1">🔥 Stubble management machines distributed in Punjab.</div>
+              <div class="news-item" id="newsitem2">🌱 New high-yield seed variety released.</div>
+              <div class="news-item" id="newsitem3">💧Localized irrigation training programs starting next week.</div>
+              <div class="news-item" id="newsitem4">💰 MSP updates pushed for rabi crops — check MSP page.</div>
+              <div class="news-item" id="newsitem5">☁️ IMD predicts patchy showers across NW regions.</div>
             </div>
             <div>
-              <div class="news-item">🔥 Stubble management machines distributed in Punjab.</div>
-              <div class="news-item">🌱 New high-yield seed variety released.</div>
-              <div class="news-item">💧Localized irrigation training programs starting next week.</div>
-              <div class="news-item">💰 MSP updates pushed for rabi crops — check MSP page.</div>
-              <div class="news-item">☁️ IMD predicts patchy showers across NW regions.</div>
+              <div class="news-item" id="newsitem1">🔥 Stubble management machines distributed in Punjab.</div>
+              <div class="news-item" id="newsitem2">🌱 New high-yield seed variety released.</div>
+              <div class="news-item" id="newsitem3">💧Localized irrigation training programs starting next week.</div>
+              <div class="news-item" id="newsitem4">💰 MSP updates pushed for rabi crops — check MSP page.</div>
+              <div class="news-item" id="newsitem5">☁️ IMD predicts patchy showers across NW regions.</div>
             </div>
           </div>
         </div>
       </aside>
     </section>
-    <section class="dashboard-bg">
+    <section class="dashboard-bg" id="dashboard">
       <section class="grid" aria-label="Features">
         <a class="big-card overlay-green" href="seeds.html"
           style="background-color:#76b852;
@@ -294,6 +294,17 @@
         </a>
       </section>
     </section>
+    <!-- How it Works Dialog -->
+    <div id="how-modal">
+      <div id="how-dialog">
+        <button id="how-close" aria-label="Close" onclick="document.getElementById('how-modal').style.display='none'">×</button>
+        <h2 style="margin:0 0 10px 0;" id="how-title">How it works</h2>
+        <p id="how1">1. Explore data and tools in the dashboard below.</p>
+        <p id="how2">2. Change language from the menu at top right.</p>
+        <p id="how3">3. Chat with the assistant about prices, crops, or tips.</p>
+        <p id="how4">4. Click cards for details and more services.</p>
+      </div>
+    </div>
   </main>
   <!-- CHATBOT UI -->
   <div class="chat-bubble" id="chatBubble" title="Chat with assistant">💬</div>
@@ -308,7 +319,6 @@
     </div>
   </div>
   <script>
-    // ---------- IST Time Display ----------
     function updateIST() {
       const now = new Date();
       const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
@@ -318,14 +328,22 @@
     }
     setInterval(updateIST, 1000); updateIST();
 
-    // ---------- Sidebar Logic ----------
+    // Sidebar logic
     const sidebar=document.getElementById('sidebar');
     const menuBtn=document.getElementById('menuBtn');
     const closeSidebar=document.getElementById('closeSidebar');
     menuBtn.addEventListener('click',()=>{sidebar.classList.add('open');});
     closeSidebar.addEventListener('click',()=>{sidebar.classList.remove('open');});
 
-    // ---------- Live Language Translation ----------
+    // "Explore Dashboard" and "How it works"
+    document.getElementById('btn-dashboard').onclick=function(){
+      document.getElementById('dashboard').scrollIntoView({behavior:'smooth'});
+    };
+    document.getElementById('btn-how').onclick=function(){
+      document.getElementById('how-modal').style.display='block';
+    };
+
+    // Live language translation (news items and how-it-works too)
     const LANGS = {
       en:{
         dashboard:'📋 Dashboard', navtitle:"Solutioneers", subtitle:"Smart Agriculture Group",
@@ -345,7 +363,17 @@
         msp:"MSP & Market Rates", mspDesc:"Daily mandi rates, eNAM prices, and trend charts.",
         yield:"Yield Comparison", yieldDesc:"Compare historical yields and forecast potential improvements.",
         navabout:"About Us", navmsp:"MSP", navyield:"Yield Comparison", navcontact:"Contact Us",
-        chat:"Assistant"
+        chat:"Assistant",
+        newsitem1:"🔥 Stubble management machines distributed in Punjab.",
+        newsitem2:"🌱 New high-yield seed variety released.",
+        newsitem3:"💧Localized irrigation training programs starting next week.",
+        newsitem4:"💰 MSP updates pushed for rabi crops — check MSP page.",
+        newsitem5:"☁️ IMD predicts patchy showers across NW regions.",
+        howtitle:"How it works",
+        how1:"1. Explore data and tools in the dashboard below.",
+        how2:"2. Change language from the menu at top right.",
+        how3:"3. Chat with the assistant about prices, crops, or tips.",
+        how4:"4. Click cards for details and more services.",
       },
       hi:{
         dashboard:'📋 डैशबोर्ड', navtitle:"समाधानकर्ता", subtitle:"स्मार्ट कृषि समूह",
@@ -365,14 +393,24 @@
         msp:"एमएसपी एवं बाजार दर", mspDesc:"दैनिक मंडी दरें, ई-नाम मूल्य एवं ट्रेंड चार्ट।",
         yield:"उपज तुलना", yieldDesc:"ऐतिहासिक उपज की तुलना व संभावित वृद्धि का पूर्वानुमान।",
         navabout:'हमारे बारे में', navmsp:"एमएसपी", navyield:"उपज तुलना", navcontact:"संपर्क करें",
-        chat:"सहायक"
+        chat:"सहायक",
+        newsitem1:"🔥 पंजाब में पराली प्रबंधन मशीनें वितरित।",
+        newsitem2:"🌱 नई उच्च-उपज बीज किस्म जारी।",
+        newsitem3:"💧स्थानीय सिंचाई प्रशिक्षण कार्यक्रम अगले सप्ताह से।",
+        newsitem4:"💰 रबी फसलों के लिए एमएसपी अपडेट—एमएसपी पेज देखें।",
+        newsitem5:"☁️ आईएमडी: NW क्षेत्रों में छिटपुट बारिश की संभावना।",
+        howtitle:"कैसे काम करता है",
+        how1:"1. नीचे डैशबोर्ड में डेटा व टूल इस्तेमाल करें।",
+        how2:"2. ऊपर दाईं ओर से भाषा बदलें।",
+        how3:"3. सहायक से मूल्य, फसल या सलाह पूछें।",
+        how4:"4. अधिक जानकारी के लिए कार्ड्स पर क्लिक करें।",
       },
       pa:{
         dashboard:'📋 ਡੈਸ਼ਬੋਰਡ', navtitle:"ਹੱਲਕਾਰੀ", subtitle:"ਸਮਾਰਟ ਖੇਤੀ ਸਮੂਹ",
         hero:'ਸਮਝਦਾਰੀ ਨਾਲ ਉਗਾਓ। ਵਧੀਆ ਫਸਲ ਵਾਲਾ ਹੋਵੋ।', herodesc:'ਅਸਲ ਸਮੇਂ ਸਲਾਹ, ਮੰਡੀ ਰੇਟ, ਸਬਸਿਡੀ ਤੇ ਮਿੱਟੀ ਜਾਣਕਾਰੀ — ਕਿਸਾਨਾਂ ਲਈ, ਡਾਟਾ ਤੋਂ ਲੈਸ।',
         btnDashboard:'ਡੈਸ਼ਬੋਰਡ ਵੇਖੋ', btnHow:'ਕਿਵੇਂ ਕੰਮ ਕਰਦਾ',
         login:"ਲਾਗਇਨ", signup:"ਸਾਈਨ ਅੱਪ",
-        abouthead:"ਬਾਰੇ ਹੱਲਕਾਰੀ",
+        abouthead:"ਬਾਰੇ ਹੱਲਕਰੀ",
         about1:"ਅਸੀਂ ਕਿਸਾਨਾਂ ਲਈ ਅਮਲੀ ਡਿਜ਼ੀਟਲ ਟੂਲ ਲਿਆਉਂਦੇ ਹਾਂ — ਮੌਸਮ, MS ਪੀ, ਮਿੱਟੀ ਸੁਝਾਵ ਤੇ ਸਲਾਹ।",
         abouttag:"ਤੁਹਾਡੀ ਜ਼ਮੀਨ। ਤੁਹਾਡਾ ਡਾਟਾ। ਵਧੀਆ ਪੈਦਾਵਾਰ।",
         newshead:"ਤਾਜ਼ਾ ਖ਼ਬਰਾਂ",
@@ -385,12 +423,21 @@
         msp:"MS ਪੀ ਅਤੇ ਮਾਰਕੀਟ ਕੀਮਤ", mspDesc:"ਰੋਜ਼ਾਨਾ ਮੰਡੀ ਕੀਮਤ, eNAM ਤੇ ਰੁਝਾਨ ਚਾਰਟ।",
         yield:"ਉਪਜ ਦੀ ਤੁਲਨਾ", yieldDesc:"ਅਤੀਤ ਉਪਜ ਦੀ ਤੁਲਨਾ ਤੇ ਸੰਭਾਵਤ ਸੁਧਾਰ ਪੂਰਵ ਅਨੁਮਾਨ।",
         navabout:'ਸਾਡੇ ਬਾਰੇ', navmsp:"ਐਮਐਸਪੀ", navyield:"ਉਪਜ ਤੁਲਨਾ", navcontact:"ਸੰਪਰਕ ਕਰੋ",
-        chat:"ਸਹਾਇਕ"
+        chat:"ਸਹਾਇਕ",
+        newsitem1:"🔥 ਪੰਜਾਬ ਵਿੱਚ ਪਰਾਲੀ ਪ੍ਰਬੰਧਨ ਮਸ਼ੀਨਾਂ ਵੰਡੀਆਂ ਗਈਆਂ।",
+        newsitem2:"🌱 ਨਵੀਂ ਉੱਚ ਉਪਜ ਬੀਜ ਕਿਸਮ ਜਾਰੀ।",
+        newsitem3:"💧ਸਥਾਨਕ ਸਿੰਚਾਈ ਦੀ ਟ੍ਰੇਨਿੰਗ ਅਗਲੇ ਹਫਤੇ ਤੋਂ।",
+        newsitem4:"💰 ਰਬੀ ਫਸਲਾਂ ਲਈ MSP ਅੱਪਡੇਟ—MSP ਪੇਜ ਵੇਖੋ।",
+        newsitem5:"☁️ IMD: NW ਖੇਤਰਾਂ ਵਿੱਚ ਕੁਝ ਹੱਦ ਤੱਕ ਵਰਖਾ।",
+        howtitle:"ਕਿਵੇਂ ਕੰਮ ਕਰਦਾ",
+        how1:"1. ਹੇਠਾਂ ਡੈਸ਼ਬੋਰਡ ਵਿੱਚ ਡਾਟਾ ਤੇ ਸਹੂਲਤਾਂ ਖੋਜੋ।",
+        how2:"2. ਉੱਤੇ ਸੱਜੇ ਤੋਂ ਆਪਣੇ ਭਾਸ਼ਾ ਚੁਣੋ।",
+        how3:"3. ਸਹਾਇਕ ਨੂੰ ਕੀਮਤਾਂ, ਫसल ਜਾਂ ਸਲਾਹ ਬਾਰੇ ਪੁੱਛੋ।",
+        how4:"4. ਕਾਰਡ ਤੇ ਕਲਿੱਕ ਕਰਕੇ ਹੁੋਰ ਜਾਣਕਾਰੀ ਲਵੋ।",
       }
     };
 
     function setLanguage(lang){
-      // Navbar/sidebar/cta
       document.getElementById("dashboard-title").textContent=LANGS[lang].dashboard;
       document.getElementById("nav-title").textContent=LANGS[lang].navtitle;
       document.getElementById("subtitle").textContent=LANGS[lang].subtitle;
@@ -409,8 +456,10 @@
       document.getElementById("nav-yield").textContent=LANGS[lang].navyield;
       document.getElementById("nav-contact").textContent=LANGS[lang].navcontact;
       document.getElementById("chat-title").textContent=LANGS[lang].chat;
-
-      // Sidebar Cards
+      // News items (in both tracks!)
+      for(let i=1;i<=5;i++)
+        document.querySelectorAll('#newsitem'+i).forEach(el=>el.textContent=LANGS[lang]['newsitem'+i]);
+      // Cards, sidebar and main (titles & desc)
       document.getElementById("card-seeds").textContent=LANGS[lang].seeds;
       document.getElementById("card-seeds-desc").textContent=LANGS[lang].seedsDesc;
       document.getElementById("card-schemes").textContent=LANGS[lang].schemes;
@@ -427,7 +476,6 @@
       document.getElementById("card-msp-desc").textContent=LANGS[lang].mspDesc;
       document.getElementById("card-yield").textContent=LANGS[lang].yield;
       document.getElementById("card-yield-desc").textContent=LANGS[lang].yieldDesc;
-      // Main page cards
       document.getElementById("main-card-seeds").textContent=LANGS[lang].seeds;
       document.getElementById("main-card-seeds-desc").textContent=LANGS[lang].seedsDesc;
       document.getElementById("main-card-schemes").textContent=LANGS[lang].schemes;
@@ -444,15 +492,21 @@
       document.getElementById("main-card-msp-desc").textContent=LANGS[lang].mspDesc;
       document.getElementById("main-card-yield").textContent=LANGS[lang].yield;
       document.getElementById("main-card-yield-desc").textContent=LANGS[lang].yieldDesc;
+      // How it works modal
+      document.getElementById("how-title").textContent=LANGS[lang].howtitle;
+      document.getElementById("how1").textContent=LANGS[lang].how1;
+      document.getElementById("how2").textContent=LANGS[lang].how2;
+      document.getElementById("how3").textContent=LANGS[lang].how3;
+      document.getElementById("how4").textContent=LANGS[lang].how4;
     }
     document.getElementById('langSel').addEventListener('change',function(){
       if(this.value==="English")setLanguage("en");
       else if(this.value==="हिन्दी")setLanguage("hi");
       else setLanguage("pa");
     });
-    setLanguage("en"); // initialize
+    setLanguage("en");
 
-    // ---------- Chatbot with OpenAI Backend ----------
+    // Chatbot
     const chatBubble=document.getElementById('chatBubble'), chatWindow=document.getElementById('chatWindow'),
       closeChat=document.getElementById('closeChat'), chatBody=document.getElementById('chatBody'),
       chatInput=document.getElementById('chatInput'), sendBtn=document.getElementById('sendBtn');
