--- a/index.html
+++ b/index.html
@@ -1,247 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <title>Solutioneers • Smart Agriculture Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
+    /* ---------- Reset ---------- */
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Montserrat, sans-serif; }
     body { background: #f4f6f9; color: #333; }
 
-    /* Top bar */
-    .topbar {
-      background: #fff;
-      padding: 15px 25px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    /* ---------- Sidebar ---------- */
+    .sidebar {
+      position: fixed; top: 0; left: 0; width: 240px; height: 100%;
+      background: #2c3e50; padding-top: 60px; transition: transform 0.3s ease;
     }
-    .topbar h1 { font-size: 22px; }
-    .topbar img { width: 35px; height: 35px; }
-
-    /* Language selector */
-    .lang-select {
-      border: 1px solid #ddd;
-      padding: 5px 10px;
-      border-radius: 6px;
-      background: #fafafa;
-      cursor: pointer;
+    .sidebar a {
+      padding: 12px 20px; display: block; color: #ecf0f1; text-decoration: none;
     }
+    .sidebar a:hover { background: #34495e; }
+    .sidebar.hidden { transform: translateX(-240px); }
 
-    /* Cards container */
+    /* ---------- Top Nav ---------- */
+    .topnav {
+      position: fixed; top: 0; left: 0; right: 0;
+      height: 60px; background: #fff; display: flex;
+      align-items: center; justify-content: space-between;
+      padding: 0 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
+    .menu-btn { cursor: pointer; font-size: 22px; }
+
+    /* ---------- Main Content ---------- */
+    .main { margin-left: 240px; padding: 80px 20px 20px; transition: margin-left 0.3s ease; }
+    .main.expanded { margin-left: 0; }
+
+    /* ---------- Cards ---------- */
     .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
-      padding: 20px;
     }
     .card {
-      background: #fff;
-      border-radius: 10px;
+      background: #fff; border-radius: 10px; padding: 15px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 15px;
       transition: transform 0.2s;
     }
     .card:hover { transform: translateY(-5px); }
-    .card img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 10px;
+    .card h3 { margin-bottom: 10px; font-size: 18px; }
+    .card p { margin-bottom: 10px; font-size: 14px; color: #555; }
+    .card button {
+      background: #007bff; color: #fff; border: none; padding: 8px 12px;
+      border-radius: 6px; cursor: pointer; font-size: 13px;
     }
-    .card h3 { margin-bottom: 8px; font-size: 18px; }
 
-    /* Auth forms */
-    .auth-container {
-      display: flex;
-      justify-content: center;
-      margin: 30px;
-      gap: 30px;
-    }
-    .auth-box {
-      background: #fff;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      width: 300px;
-    }
-    .auth-box h2 { margin-bottom: 15px; }
-    .auth-box input {
-      width: 100%; padding: 10px; margin-bottom: 12px;
-      border: 1px solid #ccc; border-radius: 6px;
-    }
-    .auth-box button {
-      width: 100%; padding: 10px; border: none;
-      background: #28a745; color: #fff; border-radius: 6px;
-      font-size: 15px; cursor: pointer;
-    }
-    .auth-box button:hover { background: #218838; }
-
-    /* Chatbot */
-    .chatbot-btn {
-      position: fixed; bottom: 20px; right: 20px;
-      background: #007bff; color: #fff;
-      padding: 12px 18px; border-radius: 30px;
-      cursor: pointer; font-size: 15px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    .chatbot-window {
-      position: fixed; bottom: 70px; right: 20px;
-      width: 300px; height: 400px;
-      background: #fff; border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-      display: none; flex-direction: column;
-    }
-    .chat-header {
-      background: #007bff; color: #fff; padding: 10px;
-      border-top-left-radius: 10px; border-top-right-radius: 10px;
-    }
-    .chat-messages {
-      flex: 1; padding: 10px; overflow-y: auto; font-size: 14px;
-    }
-    .chat-input {
-      display: flex; border-top: 1px solid #ddd;
-    }
-    .chat-input input {
-      flex: 1; border: none; padding: 10px; font-size: 14px;
-    }
-    .chat-input button {
-      border: none; padding: 10px; background: #007bff; color: #fff;
-      cursor: pointer;
-    }
+    .card .more { display: none; }
+    .card.expanded .more { display: block; }
   </style>
 </head>
 <body>
 
-  <!-- Top Bar -->
-  <div class="topbar">
-    <h1 id="title">Dashboard</h1>
-    <div>
-      <select id="languageSwitcher" class="lang-select">
-        <option value="en">English</option>
-        <option value="hi">हिंदी</option>
-      </select>
-      <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="User Icon">
-    </div>
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <a href="#">Dashboard</a>
+    <a href="#">Govt Scheme & Policies</a>
+    <a href="#">Seeds Availability</a>
+    <a href="#">Fertilizers & Pest</a>
+    <a href="#">Crop Calendar</a>
+    <a href="#">Soil Health</a>
+    <a href="#">Yield</a>
+    <a href="#">MSP</a>
   </div>
 
-  <!-- Cards -->
-  <div class="cards">
-    <div class="card">
-      <img src="https://source.unsplash.com/400x200/?tractor,machine" alt="Latest Machinery">
-      <h3 data-key="machinery">Latest Machinery</h3>
-      <p>Discover new agriculture machinery and technology updates.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="govt">Govt Scheme & Policies</h3>
-      <p>Information about government initiatives and policies.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="seeds">Seeds Availability</h3>
-      <p>Check the availability of high quality seeds.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="fertilizers">Fertilizers & Pest</h3>
-      <p>Get details about fertilizers and pest management.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="calendar">Crop Calendar</h3>
-      <p>Plan your crops effectively with the seasonal calendar.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="soil">Soil Health</h3>
-      <p>Tips and resources for improving soil health.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="yield">Yield</h3>
-      <p>Monitor and forecast crop yields accurately.</p>
-    </div>
-
-    <div class="card">
-      <h3 data-key="msp">MSP</h3>
-      <p>Latest updates on Minimum Support Prices.</p>
-    </div>
+  <!-- Top Nav -->
+  <div class="topnav">
+    <span class="menu-btn" id="menuBtn">&#9776;</span>
+    <h1>Solutioneers</h1>
   </div>
 
-  <!-- Auth Forms -->
-  <div class="auth-container">
-    <div class="auth-box">
-      <h2>Login</h2>
-      <input type="text" placeholder="Username">
-      <input type="password" placeholder="Password">
-      <button>Login</button>
-    </div>
-    <div class="auth-box">
-      <h2>Create Account</h2>
-      <input type="text" placeholder="Full Name">
-      <input type="email" placeholder="Email">
-      <input type="password" placeholder="Password">
-      <button>Sign Up</button>
-    </div>
-  </div>
+  <!-- Main Content -->
+  <div class="main" id="main">
+    <div class="cards">
+      <div class="card">
+        <h3>Govt Scheme & Policies</h3>
+        <p>Information about government initiatives.</p>
+        <div class="more">
+          <p>Expanded details about schemes and policies...</p>
+        </div>
+        <button class="toggle-btn">Read More</button>
+      </div>
 
-  <!-- Chatbot -->
-  <div class="chatbot-btn" id="chatbotBtn">Need Help ??</div>
-  <div class="chatbot-window" id="chatbotWindow">
-    <div class="chat-header">AgriBot</div>
-    <div class="chat-messages">👋 Hello! How can I help you?</div>
-    <div class="chat-input">
-      <input type="text" placeholder="Type a message...">
-      <button>Send</button>
+      <div class="card">
+        <h3>Seeds Availability</h3>
+        <p>Check availability of quality seeds.</p>
+        <div class="more">
+          <p>Expanded details about seeds...</p>
+        </div>
+        <button class="toggle-btn">Read More</button>
+      </div>
+
+      <!-- Add other cards here -->
     </div>
   </div>
 
   <script>
-    // Language translations
-    const translations = {
-      en: {
-        title: "Dashboard",
-        machinery: "Latest Machinery",
-        govt: "Govt Scheme & Policies",
-        seeds: "Seeds Availability",
-        fertilizers: "Fertilizers & Pest",
-        calendar: "Crop Calendar",
-        soil: "Soil Health",
-        yield: "Yield",
-        msp: "MSP"
-      },
-      hi: {
-        title: "डैशबोर्ड",
-        machinery: "नवीनतम मशीनरी",
-        govt: "सरकारी योजनाएँ और नीतियाँ",
-        seeds: "बीज उपलब्धता",
-        fertilizers: "उर्वरक और कीट",
-        calendar: "फसल कैलेंडर",
-        soil: "मृदा स्वास्थ्य",
-        yield: "उपज",
-        msp: "न्यूनतम समर्थन मूल्य"
-      }
-    };
-
-    const switcher = document.getElementById("languageSwitcher");
-    const title = document.getElementById("title");
-    switcher.addEventListener("change", () => {
-      const lang = switcher.value;
-      const dict = translations[lang];
-      title.textContent = dict.title;
-      document.querySelectorAll("[data-key]").forEach(el => {
-        el.textContent = dict[el.getAttribute("data-key")];
-      });
+    // Sidebar toggle
+    const menuBtn = document.getElementById("menuBtn");
+    const sidebar = document.getElementById("sidebar");
+    const main = document.getElementById("main");
+    menuBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("hidden");
+      main.classList.toggle("expanded");
     });
 
-    // Chatbot toggle
-    const chatbotBtn = document.getElementById("chatbotBtn");
-    const chatbotWindow = document.getElementById("chatbotWindow");
-    chatbotBtn.addEventListener("click", () => {
-      chatbotWindow.style.display = chatbotWindow.style.display === "flex" ? "none" : "flex";
+    // Card expand/collapse
+    const toggleBtns = document.querySelectorAll(".toggle-btn");
+    toggleBtns.forEach(btn => {
+      btn.addEventListener("click", () => {
+        const card = btn.parentElement;
+        card.classList.toggle("expanded");
+        btn.textContent = card.classList.contains("expanded") ? "Show Less" : "Read More";
+      });
     });
   </script>
 </body>
