--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
     .sidebar.open{display:block;}
     .sidebar h3 {color: #fff;}
     .sidebar nav a {color:#fff;}
-    .navbar{position:sticky;top:0;z-index:1200;display:flex;justify-content:space-between;align-items:center;padding:14px 26px;background:white;box-shadow:0 6px 18px rgba(20,30,20,0.06);border-bottom:1px solid #e6f0ea;}
+
+    /* NAVBAR */
+    .navbar{
+      position:sticky;
+      top:0;
+      z-index:1200;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 26px;
+      background:white;
+      box-shadow:0 6px 18px rgba(20,30,20,0.06);
+      border-bottom:1px solid #e6f0ea;
+    }
     .nav-left{display:flex;align-items:center;gap:14px;}
     .menu-btn{display:inline-flex;align-items:center;justify-content:center;width:44px;height:44px;border-radius:10px;border:none;background:linear-gradient(180deg,#fff,#f1f5f1);font-size:20px;cursor:pointer;}
     .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:#196f3d;}
@@ -41,9 +54,6 @@
     .nav-time{font-size:13px;color:#3a3a3a;margin-left:6px;}
     .nav-right{display:flex;align-items:center;gap:8px;}
     .lang-select{padding:8px 12px;border-radius:8px;border:1px solid #e6f0ea;background:#e8f6ee;}
-    .btn{padding:9px 14px;border-radius:9px;border:none;cursor:pointer;font-weight:600;}
-    .btn.login{background:transparent;border:1px solid #ddd;color:#175a30;}
-    .btn.cta{background:#1e7b3f;color:#fff;}
 
     /* MODAL STYLES */
     .modal-overlay {
@@ -306,21 +316,6 @@
     .overlay-yellow{background:linear-gradient(135deg,rgba(255,195,79,0.60),rgba(255,143,0,0.45));}
     .overlay-blue{background:linear-gradient(135deg,rgba(95,150,255,0.45),rgba(65,120,255,0.38));}
     .overlay-purple{background:linear-gradient(135deg,rgba(200,140,255,0.45),rgba(145,86,255,0.36));}
-    .card-detail {
-      display:none;
-      background:#e6fff5;
-      color:#153;
-      margin-top:-5px;margin-bottom:30px;
-      border-radius:14px;
-      padding:24px 24px 24px 24px;
-      box-shadow:0 8px 28px rgba(17,128,60,0.07);
-      font-size:16px;
-      max-width:95vw;
-      overflow-x:auto;
-      line-height:1.48;
-      border-left:5px solid #1e7b3f;
-    }
-    .card-detail h4 {margin-top:0;color:#206539;font-size:20px;}
 
     /* Responsive */
     @media (max-width:1200px){.section{grid-template-columns:1fr;max-width:96vw;}}
@@ -472,16 +467,16 @@
       <h3 id="news-head">Latest News</h3>
       <div class="news-scroll">
         <div class="news-track" id="newsTrack">
-          <div class="news-item" id="newsitem1">Stubble management machines distributed in Punjab.</div>
-          <div class="news-item" id="newsitem2">New high-yield seed variety released.</div>
-          <div class="news-item" id="newsitem3">Localized irrigation training programs starting next week.</div>
-          <div class="news-item" id="newsitem4">MSP updates pushed for rabi crops – check MSP page.</div>
-          <div class="news-item" id="newsitem5">IMD predicts patchy showers across NW regions.</div>
-          <div class="news-item" id="newsitem6">Stubble management machines distributed in Punjab.</div>
-          <div class="news-item" id="newsitem7">New high-yield seed variety released.</div>
-          <div class="news-item" id="newsitem8">Localized irrigation training programs starting next week.</div>
-          <div class="news-item" id="newsitem9">MSP updates pushed for rabi crops – check MSP page.</div>
-          <div class="news-item" id="newsitem10">IMD predicts patchy showers across NW regions.</div>
+          <div class="news-item">Stubble management machines distributed in Punjab.</div>
+          <div class="news-item">New high-yield seed variety released.</div>
+          <div class="news-item">Localized irrigation training programs starting next week.</div>
+          <div class="news-item">MSP updates pushed for rabi crops – check MSP page.</div>
+          <div class="news-item">IMD predicts patchy showers across NW regions.</div>
+          <div class="news-item">Stubble management machines distributed in Punjab.</div>
+          <div class="news-item">New high-yield seed variety released.</div>
+          <div class="news-item">Localized irrigation training programs starting next week.</div>
+          <div class="news-item">MSP updates pushed for rabi crops – check MSP page.</div>
+          <div class="news-item">IMD predicts patchy showers across NW regions.</div>
         </div>
       </div>
     </aside>
@@ -506,7 +501,7 @@
           </ul>
         </div>
       </div>
-      <!-- ... Repeat other cards ... -->
+      <!-- Add more cards as needed -->
     </section>
   </section>
 </main>
@@ -520,13 +515,6 @@
   }
   setInterval(updateIST, 1000);
   updateIST();
-
-  // Sidebar Logic
-  const sidebar = document.getElementById('sidebar');
-  const menuBtn = document.getElementById('menuBtn');
-  const closeSidebar = document.getElementById('closeSidebar');
-  menuBtn.addEventListener('click', () => sidebar.classList.add('open'));
-  closeSidebar.addEventListener('click', () => sidebar.classList.remove('open'));
 
   // Login/Signup Modals
   document.getElementById('btnLogin').onclick = () => {
@@ -570,8 +558,13 @@
   const chatInput = document.getElementById("chatInput");
   const sendBtn = document.getElementById("sendBtn");
 
-  chatBubble.addEventListener('click', () => chatWindow.classList.toggle("open"));
-  closeChat.addEventListener('click', () => chatWindow.classList.remove("open"));
+  chatBubble.addEventListener('click', () => {
+    chatWindow.classList.toggle("open");
+  });
+
+  closeChat.addEventListener('click', () => {
+    chatWindow.classList.remove("open");
+  });
 
   function appendMsg(text, me) {
     const div = document.createElement("div");
