--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,22 @@ document.querySelectorAll('.big-card').forEach(card => {
     modalElement.style.display = 'flex';
   };
 });
+<!-- AI Chatbot Interface -->
+<div id="chat-window" class="chat-window" style="display:none; position:fixed; bottom:20px; right:20px; width:350px; height:450px; background:white; border-radius:18px; box-shadow:0 10px 30px rgba(0,0,0,0.15); z-index:1000; display:flex; flex-direction:column;">
+  <div style="background:#1e7b3f; color:white; padding:12px; border-radius:18px 18px 0 0; display:flex; justify-content:space-between; align-items:center;">
+    <span>AI Farming Assistant</span>
+    <button id="close-chat" style="background:none; border:none; color:white; font-size:20px; cursor:pointer;">×</button>
+  </div>
+  <div id="chat-messages" style="flex:1; padding:15px; overflow-y:auto; background:#f9f9f9;">
+    <!-- Messages will appear here -->
+  </div>
+  <div style="padding:12px; border-top:1px solid #eee; display:flex; gap:8px;">
+    <input type="text" id="user-input" placeholder="Ask about crops, MSP, or weather..." style="flex:1; padding:8px 12px; border:1px solid #ddd; border-radius:8px; font-size:14px;" />
+    <button id="send-btn" style="padding:8px 16px; background:#1e7b3f; color:white; border:none; border-radius:8px; cursor:pointer;">Send</button>
+  </div>
+</div>
+
+<button id="open-chat" style="position:fixed; bottom:30px; right:30px; width:60px; height:60px; border-radius:50%; background:#1e7b3f; color:white; border:none; box-shadow:0 4px 10px rgba(30,123,63,0.3); font-size:24px; cursor:pointer; z-index:999;">💬</button>
  </script>
 </body>
 </html>
